chore: fix screen overflow limit char input-output

--- a/style/style.css
+++ b/style/style.css
@@ -271,6 +271,10 @@ small,
   grid-column: 1/5;
   background-color: var(--color-blue-300);
   width: 300px;
+  height: 177px;
+  flex: 0 1 auto;
+  overflow: hidden;
+  text-overflow: string;
 }
 
 #main-text {
